# mvpwakascribe

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  OPENVINO_STATE_FIX.md  PLAN_CORRECTION.md  PRD_WakaScribe_MVP.md  install_mac.md  install_pc.md  package-lock.json  package.json  session_2026-02-06.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/sidecar/parakeet-coreml/: Package.swift
src-tauri/sidecar/parakeet-coreml/Sources/: main.swift
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/audio/: capture.rs  chunker.rs  mod.rs  processor.rs  vad.rs
src-tauri/src/commands/: audio.rs  export.rs  history.rs  mod.rs  settings.rs  test_transcription.rs  transcription.rs
src-tauri/src/engine/: config.rs  coreml.rs  decoder.rs  mel.rs  merger.rs  mod.rs  onnxruntime.rs  parakeet.rs
src-tauri/src/export/: docx.rs  mod.rs  txt.rs
src-tauri/src/storage/: database.rs  mod.rs  models.rs  queries.rs
src/components/: Layout.tsx  TitleBar.tsx
src/components/Editor/: ExportMenu.tsx  SegmentList.tsx  index.tsx
src/components/FileTranscribe/: DropZone.tsx  ProgressBar.tsx  index.tsx
src/components/History/: SearchBar.tsx  TranscriptionCard.tsx  index.tsx
src/components/Recorder/: ConfidenceIndicator.tsx  RecordingControls.tsx  WaveformDisplay.tsx  index.tsx
src/components/Settings/: AppearanceSettings.tsx  AudioSettings.tsx  EngineSettings.tsx  ShortcutSettings.tsx  TranscriptionSettings.tsx  index.tsx
src/components/TestButton/: TestButton.tsx  index.ts
src/hooks/: useAudioDevices.ts  useRecording.ts  useSettings.ts  useTheme.ts  useTranscription.ts
src/lib/: tauri.ts  types.ts
src/stores/: appStore.ts
